[package]
name = "note_frequencies"
description = "Generate a lookup table of midi note frequencies"
repository = "https://github.com/derekdreery/note-frequencies"
version = "0.1.1"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "0.15.39"
quote = "0.6.13"
